# BEASTIE

./: .dockerignore  .gitignore  .gitmodules  DOC_ASE_SM_summary.md  DOC_GSDpatients.md  DOC_ModelPrior.md  DOC_alignment.md  DOC_logisticReg_for_prior.md  DOC_logisticrReg.md  DOC_modelPerformance.md  Dockerfile  MANIFEST.in  Makefile  README.md  calculate_p_value_from_BEASTIE.py  check_SNPs_composition.py  collect_alignmentBias_SNP.py  novelgene_SNPcomposition.py  requirements.txt  run_BEASTIE.sh  run_BEASTIE_GSD.sh  run_BEASTIE_atacseq.sh  run_BEASTIE_template.sh  run_beastie  run_calculate_p_value_from_BEASTIE.py  run_extractHets.py  run_extractHets_atacseq.py  setup.cfg  setup.py  test_token_locking.py
BEASTIE/: ADM_for_real_data.py  BEASTIE.py  BEASTIE3-fix-uniform  BEASTIE3-fix-uniform.stan  Get_LD.R  Get_phasing_error_rate.R  LinearReg_BEASTIE_fitted_model_lambda.rds  LinearReg_BEASTIE_fitted_model_lambda_loglambda_version2.rds  LinearReg_BEASTIE_fitted_model_lambda_loglambdaminus1.rds  LinearReg_iBEASTIE_fitted_model_lambda.rds  LinearReg_iBEASTIE_fitted_model_lambda_loglambda.rds  LinearReg_iBEASTIE_fitted_model_lambda_loglambda_version2.rds  LinearReg_iBEASTIE_fitted_model_lambda_loglambdaminus1.rds  LogisticReg_GIAB_fitted_phasing_error.rds  Summarization.ipynb  __init__.py  annotateLD.py  annotate_LD_new.R  annotation.py  annotationAF.py  beastie_step1.py  beastie_step2.py  binomial_for_real_data.py  calculate_p.py  cleanVCF.py  extractAF.py  extractHets.py  filterGenotypingError.py  gam1_1_all_lambdamodel.pkl  gam1_lambdamodel.pkl  gam2_lambdamodel.pkl  (+52 more)
(+203 files in other folders)
