[metadata]
name = BEASTIE
version = 0.2.0
description = Bayesian Estimation of Allele Specific Transcription Integrating across Exons
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
url = https://github.com/x811zou/BEASTIE
author = Xue (Scarlett) Zou
author_email = xue.zou@duke.edu

[options]
include_package_data = True
packages =
    BEASTIE
    BEASTIE.misc_tools
package_dir =
    BEASTIE=BEASTIE
scripts =
    bin/beastie
zip_safe = False
